[gd_scene load_steps=4 format=3 uid="uid://btmh8f2vblini"]

[ext_resource type="Script" path="res://modules/characters/enemy/projectile/enemy_bullet.gd" id="1_7dwys"]
[ext_resource type="Texture2D" uid="uid://b5u42carqyqo4" path="res://modules/characters/enemy/projectile/laser_green.png" id="1_on8ot"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mnefy"]
radius = 2.0
height = 28.0

[node name="EnemyBullet" type="Area2D"]
script = ExtResource("1_7dwys")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_on8ot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mnefy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.5, 1)
scale = Vector2(1.25, 0.2)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
